[package]
name = "blackscholes_wasm"
version = "0.18.0"
edition = "2021"
license = "MIT"
description = "Black-Scholes option pricing model calculator"
repository = "https://github.com/hayden4r4/blackscholes-wasm"
documentation = "https://docs.rs/blackscholes_wasm"
readme = "README.md"
authors = ["Hayden Rose"]
keywords = ["finance", "option", "WASM", "blackscholes", "option-pricing"]

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.15"
statrs = "0.16.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
